Port SharedMemoryIncremental PortAllocation class to Java and add exports to reference private internal package: java.base/sun.nio.ch=ALL-UNNAMED